added images, filled index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div class="hotels">
+        <div class="container">
+            <div class="hotels__title">
+                <h2>Homes guests loves</h2>
+            </div>
+            <div class="hotels__cards">
+                <div class="hotel-card">
+                    <div class="hotel-card__img">
+                        <img src="./img/hotel-01.jpg" alt="Hotel Leopold">
+                    </div>
+                    <div class="hotel-card__name">Hotel Leopold</div>
+                    <div class="hotel-card__loc">Saint Petersburg, Russia</div>
+                </div>
+                <div class="hotel-card">
+                    <div class="hotel-card__img">
+                        <img src="./img/hotel-02.jpg" alt="Apartment Sunshine">
+                    </div>
+                    <div class="hotel-card__name">Apartment Sunshine</div>
+                    <div class="hotel-card__loc">Santa  Cruz de Tenerife, Spain</div>
+                </div>
+                <div class="hotel-card">
+                    <div class="hotel-card__img">
+                        <img src="./img/hotel-03.jpg" alt="Villa Kunerad">
+                    </div>
+                    <div class="hotel-card__name">Villa Kunerad</div>
+                    <div class="hotel-card__loc">Vysokie Tatry, Slowakia</div>
+                </div>
+                <div class="hotel-card">
+                    <div class="hotel-card__img">
+                        <img src="./img/hotel-03.jpg" alt="Hostel Friendship">
+                    </div>
+                    <div class="hotel-card__name">Hostel Friendship</div>
+                    <div class="hotel-card__loc">Berlin, Germany</div>
+                </div>
+                <div class="hotel-cards__arrow">
+                    <img src="./img/hotel-arrow.svg" alt="arrow">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
