--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,34 +16,42 @@
             </div>
             <div class="hotels__cards">
                 <div class="hotel-card">
-                    <div class="hotel-card__img">
-                        <img src="./img/hotel-01.jpg" alt="Hotel Leopold">
-                    </div>
-                    <div class="hotel-card__name">Hotel Leopold</div>
+                    <a href="#">
+                        <div class="hotel-card__img">
+                            <img src="./img/hotel-01.jpg" alt="Hotel Leopold">
+                        </div>
+                        <div class="hotel-card__name">Hotel Leopold</div>
+                    </a>
                     <div class="hotel-card__loc">Saint Petersburg, Russia</div>
                 </div>
                 <div class="hotel-card">
-                    <div class="hotel-card__img">
-                        <img src="./img/hotel-02.jpg" alt="Apartment Sunshine">
-                    </div>
-                    <div class="hotel-card__name">Apartment Sunshine</div>
+                    <a href="#">
+                        <div class="hotel-card__img">
+                            <img src="./img/hotel-02.jpg" alt="Apartment Sunshine">
+                        </div>
+                        <div class="hotel-card__name">Apartment Sunshine</div>
+                    </a>
                     <div class="hotel-card__loc">Santa  Cruz de Tenerife, Spain</div>
                 </div>
                 <div class="hotel-card">
-                    <div class="hotel-card__img">
-                        <img src="./img/hotel-03.jpg" alt="Villa Kunerad">
-                    </div>
-                    <div class="hotel-card__name">Villa Kunerad</div>
+                    <a href="#">
+                        <div class="hotel-card__img">
+                            <img src="./img/hotel-03.jpg" alt="Villa Kunerad">
+                        </div>
+                        <div class="hotel-card__name">Villa Kunerad</div>
+                    </a>
                     <div class="hotel-card__loc">Vysokie Tatry, Slowakia</div>
                 </div>
                 <div class="hotel-card">
-                    <div class="hotel-card__img">
-                        <img src="./img/hotel-03.jpg" alt="Hostel Friendship">
-                    </div>
-                    <div class="hotel-card__name">Hostel Friendship</div>
+                    <a href="#">
+                        <div class="hotel-card__img">
+                            <img src="./img/hotel-03.jpg" alt="Hostel Friendship">
+                        </div>
+                        <div class="hotel-card__name">Hostel Friendship</div>
+                    </a>
                     <div class="hotel-card__loc">Berlin, Germany</div>
                 </div>
-                <div class="hotel-cards__arrow">
+                <div class="hotels__cards--arrow">
                     <img src="./img/hotel-arrow.svg" alt="arrow">
                 </div>
             </div>
