smaill fixes in css and html files

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                     </a>
                     <div class="hotel-card__loc">Vysokie Tatry, Slowakia</div>
                 </div>
-                <div class="hotel-card">
+                <div class="hotel-card hotel-card--last">
                     <a href="#">
                         <div class="hotel-card__img">
-                            <img src="./img/hotel-03.jpg" alt="Hostel Friendship">
+                            <img src="./img/hotel-04.jpg" alt="Hostel Friendship">
+                            <div class="hotels__cards--arrow">
+                                <img src="./img/hotel-arrow.svg" alt="arrow">
+                            </div>
                         </div>
                         <div class="hotel-card__name">Hostel Friendship</div>
                     </a>
                     <div class="hotel-card__loc">Berlin, Germany</div>
-                </div>
-                <div class="hotels__cards--arrow">
-                    <img src="./img/hotel-arrow.svg" alt="arrow">
                 </div>
             </div>
         </div>
