added an arrow svg for hover

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         <div class="hotel-card__img">
                             <img src="./img/hotel-04.jpg" alt="Hostel Friendship">
                             <div class="hotels__cards--arrow">
-                                <img src="./img/hotel-arrow.svg" alt="arrow">
+                                <img class="white" src="./img/hotel-arrow.svg" alt="arrow">
+                                <img class="black" src="./img/hotel-arrow--hover.svg" alt="arrow">
                             </div>
                         </div>
                         <div class="hotel-card__name">Hostel Friendship</div>
