--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="offers">
+        <div class="container">
+            <div class="offers__title">
+                <h2>What do we offer</h2>
+            </div>
+        <div class="offers__cards">
+            <div class="offers-card">
+                <div class="offers-card-img">
+                    <img src="assets/img/offers/offers-1.svg" alt="Support 24/7">
+                </div>
+                <div class="offers-card-text">Support 24/7</div>
+            </div>
+            <div class="offers-card">
+                <div class="offers-card-img">
+                    <img src="assets/img/offers/offers-2.svg" alt="Communicate directly">
+                </div>
+                <div class="offers-card-text">Communicate directly</div>
+            </div>
+            <div class="offers-card">
+                <div class="offers-card-img">
+                    <img src="assets/img/offers/offers-3.svg" alt="Book online">
+                </div>
+                <div class="offers-card-text">Book online</div>
+            </div>
+            <div class="offers-card">
+                <div class="offers-card-img">
+                    <img src="assets/img/offers/offers-4.svg" alt="Real guest reviews">
+                </div>
+                <div class="offers-card-text">Real guest reviews</div>
+            </div>
+        </div>
+        </div>
+    </div>
     <div class="hotels">
         <div class="container">
             <div class="hotels__title">
@@ -18,7 +51,7 @@
                 <div class="hotel-card">
                     <a href="#">
                         <div class="hotel-card__img">
-                            <img src="./img/hotel-01.jpg" alt="Hotel Leopold">
+                            <img src="assets/img/hotels/hotel-01.jpg" alt="Hotel Leopold">
                         </div>
                         <div class="hotel-card__name">Hotel Leopold</div>
                     </a>
@@ -27,7 +60,7 @@
                 <div class="hotel-card">
                     <a href="#">
                         <div class="hotel-card__img">
-                            <img src="./img/hotel-02.jpg" alt="Apartment Sunshine">
+                            <img src="assets/img/hotels/hotel-02.jpg" alt="Apartment Sunshine">
                         </div>
                         <div class="hotel-card__name">Apartment Sunshine</div>
                     </a>
@@ -36,7 +69,7 @@
                 <div class="hotel-card">
                     <a href="#">
                         <div class="hotel-card__img">
-                            <img src="./img/hotel-03.jpg" alt="Villa Kunerad">
+                            <img src="assets/img/hotels/hotel-03.jpg" alt="Villa Kunerad">
                         </div>
                         <div class="hotel-card__name">Villa Kunerad</div>
                     </a>
@@ -45,10 +78,10 @@
                 <div class="hotel-card hotel-card--last">
                     <a href="#">
                         <div class="hotel-card__img">
-                            <img src="./img/hotel-04.jpg" alt="Hostel Friendship">
+                            <img src="assets/img/hotels/hotel-04.jpg" alt="Hostel Friendship">
                             <div class="hotels__cards--arrow">
-                                <img class="white" src="./img/hotel-arrow.svg" alt="arrow">
-                                <img class="black" src="./img/hotel-arrow--hover.svg" alt="arrow">
+                                <img class="white" src="assets/img/hotels/hotel-arrow.svg" alt="arrow">
+                                <img class="black" src="assets/img/hotels/hotel-arrow--hover.svg" alt="arrow">
                             </div>
                         </div>
                         <div class="hotel-card__name">Hostel Friendship</div>
