fixed a path to about/index.html, added a cite attribute to blockquote, changed spaces in about/index

--- a/lesson-2/about/index.html
+++ b/lesson-2/about/index.html
@@ -9,30 +9,26 @@
 </head>
 <body>
 <h1>Aliaksandr Tarashkevich</h1>
+<h4>И почему у него получится стать <em>четеньким разрабом</em> во фронтенде</h4>
 
 <hr>
 
-<h4>И почему у него получится стать <em>четеньким разрабом</em> во фронтенде</h4>
-
 <h2>Основные преимущества Тарашкевича Александра:</h2>
-
-<p>У Александра есть <strong>commitment</strong> и <strong>хорошее чувство юмора</strong>. А раз есть commitment - то
-  это уже два плюса в одном: </p>
-
+<p>У Александра есть <strong>commitment</strong> и <strong>хорошее чувство юмора</strong>.
+  А раз есть commitment - то это уже два плюса в одном:
+</p>
 <ul>
   <li>Само по себе наличие commitment'a повышает вероятность успешного достижения цели</li>
   <li>У Александра достаточно хороший английский, чтобы он знал такое слово</li>
 </ul>
-
 <p>В принципе, чувство юмора тут не имеет значения. Но зато у Александра уже есть опыт работы в верстке и минимально во
-  frontend'е, что дает ему преимущество и наделяет большой силой.</p>
-
+  frontend'е, что дает ему преимущество и наделяет большой силой.
+</p>
 <p>
   А <q>с большой силой приходит большая ответственность... (Дядя Бен &#169;)</q>
 </p>
 
 <h2>А если серьезно:</h2>
-
 <p>
   Я считаю, есть несколько причин, почему у меня получится:
   <br>
@@ -49,7 +45,7 @@
   Просто, чтобы использовать sub и sup я оставлю это здесь - Оруэлл<sup>19</sup><sub>84</sub>
   <br>
   3) У меня есть много мини-целей в жизни и эта работа поможет мне их добиться. Вот некоторые из них:
-
+</p>
 <ul>
   <li>
     Я поеду отдыхать в Новую Зеландию хотя бы на месяц
@@ -64,9 +60,8 @@
     кинотеатром и холодосом с пивком. &#128293; &#128526;
   </li>
 </ul>
-</p>
 
-<blockquote>
+<blockquote cite="https://ru.wikiquote.org/wiki/%D0%93%D1%83%D1%80%D1%80%D0%B5%D0%BD-%D0%9B%D0%B0%D0%B3%D0%B0%D0%BD%D0%BD">
   <br>
   "Магма течет в наших венах. Раскаляя сердца.
   <br>
