--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Моя первая страница</h1>
     <p>
-        <a href="./about/index.html">Об авторе</a>
+        <a href="./about/">Об авторе</a>
     </p>
 </body>
 </html>
